# app_package/api/regions.py
@@ -11,7 +11,7 @@ from app_package.api import bp as bp_api
 from app_package.src import PreproDF, PopulationInfo, \
                             AreaOnMapFile, DensityInfo, \
                             PopInfoForAPI, MigInfoForAPI, \
-                            ValIdentityMatrix
+                            ValIdentityMatrix, MigForecast
 
 import pandas as pd
 import geopandas as gpd
@@ -19,7 +19,6 @@ import numpy as np
 import requests
 from shapely.geometry import Polygon
 import os
-
 
 
 file_dir = 'app_package/src/population_data/'
@@ -303,6 +302,7 @@ def pop_needs():
     return Response(df.to_json(orient="split"), 
                     mimetype='application/json')
 
+
 #____________ OFFICIAL F11
 
 @bp_api.route('/regions/main_info', methods=['GET'])
@@ -327,8 +327,16 @@ def detailed_info():
     return [pop_df.to_json(), groups_df.to_json(), dynamic_pop_df.to_json(),
             soc_pyramid_df.to_json(), values_df.to_json()]
 
-#____________ OFFICIAL F21
 
+@bp_api.route('/regions/values_identities', methods=['GET'])
+@cross_origin()
+def values_identities():
+    territory_id = request.args.get('territory_id', type = int, default = 34)
+    result = ValIdentityMatrix.muni_tab(territory_id)
+    return Response(result, mimetype='application/json')
+
+
+#____________ OFFICIAL F21
 
 @bp_api.route('/migrations/main_info', methods=['GET'])
 @cross_origin()
@@ -374,9 +382,25 @@ def detailed_migr():
                         mimetype='application/json')
 
 
-@bp_api.route('/regions/values_identities', methods=['GET'])
+## код Альберта; прогноз миграции
+@bp_api.route('/migrations/forecast', methods=['GET'])
 @cross_origin()
-def values_identities():
-    territory_id = request.args.get('territory_id', type = int, default = 34)
-    result = ValIdentityMatrix.muni_tab(territory_id)
-    return Response(result, mimetype='application/json')
+def mig_forecast():
+    features = ['year', 'popsize', 'avgemployers', 'avgsalary', 'shoparea', 
+                'foodseats', 'retailturnover', 'livarea', 'sportsvenue', 
+                'servicesnum', 'roadslen', 'livestock', 'harvest', 'agrprod', 
+                'hospitals', 'beforeschool']
+    
+    input_values = []
+    for param in features:
+        param_value = request.args.get(param, type = float)
+        input_values.append(param_value)
+    
+    # обработка входных параметров
+    inputdata = pd.DataFrame.from_records([input_values], 
+                                          columns=features)
+    inputdata = inputdata.astype(float)
+    
+    res = MigForecast.model_outcome(inputdata)
+    return Response(res.to_json(orient="records"), 
+                    mimetype='application/json')
